# githack

./: .gitignore  README.md  githack.py  pyproject.toml
githack/: __init__.py  __main__.py  cli.py  parser.py  scanner.py
lib/: parser.py
