[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "githack"
version = "1.0.0"
description = "Rebuild source code from an exposed .git folder"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "LiJieJie" },
]
keywords = ["git", "security", "pentest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
githack = "githack.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["githack*"]
